--- a/dtc/app/views/layouts/application.html.erb
+++ b/dtc/app/views/layouts/application.html.erb
@@ -7,9 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
- 		<p class="notice"><%= notice %></p>
-      	<p class="alert"><%= alert %></p>
-<%= yield %>
+ 	<p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+	<%= yield %>
+
+
+	<!-- //might remove this line, along with widget -->
+	<%= render 'layouts/user_widget' %>
 
 </body>
 </html>
