--- a/dtc/app/views/devise/registrations/new.html.erb
+++ b/dtc/app/views/devise/registrations/new.html.erb
@@ -3,9 +3,15 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+  <div><%= f.label :name %><br />
+  <%= f.text_field :name %></div>
+
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
+  <div><%= f.label :type %><br />
+  <%= f.select :type, [['Developer', 'Developer'], ['Employer', 'Employer']] %></div>
+ 
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
@@ -16,3 +22,6 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+
+ 
