--- a/dtc/app/views/layouts/application.html.erb
+++ b/dtc/app/views/layouts/application.html.erb
@@ -7,14 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<% if user_signed_in? %>
+  <p>Welcome <%= current_user.name %></p>
+  <%= link_to 'Logged In [click to logout]', destroy_user_session_path, :method => :delete %>
+<% else %>
+  <p>You are not signed in.</p>
+  <%= link_to 'Login', new_user_session_path %>
+<% end %>
+
  	<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= render 'layouts/user_widget' %>
+    
+
 	<%= yield %>
-
-
-	<!-- //might remove this line, along with widget -->
-	
 
 </body>
 </html>
