saving name also

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -15,7 +15,7 @@
 <%= form_for @project do |f| %>
 
   <%= f.label :name %>:
-  <%= f.label :name %><br />
+  <%= f.text_field :name %><br />
 
   <%= f.label :email %>:
   <%= f.text_field :email %><br />
