--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,4 @@
 
 <h1><a href="<%= new_project_path %>">Contact us about your project</a></h1>
 
-<h1><a href="<%=  about_path %>">Our Team</a></h1>
+<h1><a href="<%=  profiles_path %>">Our Team</a></h1>
