--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,9 +1,9 @@
 edit.html.erb
 
 <form action="<%= project_path(@project) %>" method="post">
-	<input type="text" name="year" value="<%= @project.title %>"/>
-	<input type="text" name="make" value="<%= @project.email %>" />
-	<input type="text" name="model" value="<%= @project.title %>" />
+	<input type="text" name="title" value="<%= @project.title %>"/>
+	<input type="text" name="email" value="<%= @project.email %>" />
+	<input type="text" name="description" value="<%= @project.title %>" />
 	<input name="_method" type="hidden" value="put" />
 	<input type="submit" value="Edit">
 </form>
