--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,3 +3,5 @@
 <h1><a href="<%= new_project_path %>">Contact us about your project</a></h1>
 
 <h1><a href="<%=  profiles_path %>">Our Team</a></h1>
+
+<h1><a href="<%= contacts_path %>">Contact us/send email</a></h1>
