backend is pretty close to where I want it to be

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
   <%= f.email_field :email, :autofocus => true %></div>
 
   <div><%= f.label :type %><br />
-  <%= f.select :type, [['Developer', 'Developer'], ['Employer', 'Employer']] %></div>
+  <%= f.select :type, [['Developer', 'Developer'], ['Client', 'Employer']] %></div>
  
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
