--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,18 @@
 </head>
 <body>
 
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
 <% if user_signed_in? %>
   <p>Welcome <%= current_user.name %></p>
-  <%= link_to 'Logged In [click to logout]', destroy_user_session_path, :method => :delete %>
+  <%= link_to 'logout', destroy_user_session_path, :method => :delete %>
 <% else %>
   <p>You are not signed in.</p>
   <%= link_to 'Login', new_user_session_path %>
 <% end %>
 
- 	<p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+ 
     
 
 	<%= yield %>
