--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -25,4 +25,8 @@
 		<% end %>
 	</tbody>
 </table>
+
+<a href="<%= root_path %>">Home Page</a>
+
 <a href="<%= new_profile_path %>">Want to become a part of DTC?</a>
+
