confirmed that only developers can save profile, and employer ccan safe project

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -33,9 +33,24 @@ input{
 
 #profile-form {
   display: none;
+  z-index: +1;
 }
-
 
 #project-form {
   display: none;
+  z-index: +1;
 }
+
+#project-list {
+ z-index: +1;
+  width: 50%;
+  background-color: yellow;
+  border-radius: 1em;
+  padding: 1em;
+  margin: .25em;
+  width: 50%;
+  box-shadow: .1em .1em darkgray;
+}
+
+
+
