--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -6,14 +6,27 @@
 				
 				<button id="profile-button" type="button" class="btn btn-default btn-lg active">Contact us to become a part of the team</button>
 				
-				<button id="project-button" type="button" class="btn btn-default btn-lg active">
-					Contact us for project
-				</button>
+				<button id="project-button" type="button" class="btn btn-default btn-lg active">Contact us for project</button>
+
+				<button id="about-button" type="button" class="btn btn-default btn-lg active">about</button>
 			</div>
 			</div>
 		</div>
 		<!-- <div class="row"> -->
 			<!-- <div clas="col-md-offset-8"> -->
+
+					<form id="project-form">
+						<input id="name-field" placeholder='name' type="text"><br>
+						<input id="email-field" placeholder='email' type="text"><br>
+						<input id="title-field" placeholder='title' type="text"><br>
+						<input id="description-field" placeholder='description' type="text"><br>
+						<button type="submit"></button>
+					</form>
+
+
+
+
+
 
 				<div class="container"> 
 					<div class="jumbotron">
@@ -61,7 +74,7 @@
 				<!-- </div> -->
 					<div class="col-md-3 col-md-offset-8">
 						<!-- Profile List -->
-					<ul id='profile-list'>
+					<div id='profile-list'>
 					</ul>
 					</div>
 				
@@ -75,13 +88,13 @@
 
 			<!--projects code -->
 					<!-- project form -->
-					<form id="project-form">
+					<!-- <form id="project-form">
 						<input id="name-field" placeholder='name' type="text"><br>
 						<input id="email-field" placeholder='email' type="text"><br>
 						<input id="title-field" placeholder='title' type="text"><br>
 						<input id="description-field" placeholder='description' type="text"><br>
 						<button type="submit"></button>
-					</form>
+					</form> -->
 
 					<!-- project list -->
 					<ul id='project-list'>
