--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,8 +1,8 @@
 
 		<!-- trying without the navbar -->
-		<div class = "navbar navbar-inverse navbar-fixed-top">
+		<div class = "navbar navbar navbar-fixed-top"
 			<div class="container">
-			<div class="navbar-inner">
+			<div class="navbar-inner"> 
 				
 				<button id="profile-button" type="button" class="btn btn-default btn-lg active">Contact us to become a part of the team</button>
 				
@@ -10,10 +10,12 @@
 
 				<button id="about-button" type="button" class="btn btn-default btn-lg active">about</button>
 			</div>
-			</div>
-		</div>
-		<!-- <div class="row"> -->
-			<!-- <div clas="col-md-offset-8"> -->
+			</div> 
+			</div> 
+		
+					<div id='about-info'>
+						"hello"
+					</div>
 
 					<form id="project-form">
 						<input id="name-field" placeholder='name' type="text"><br>
@@ -23,8 +25,14 @@
 						<button type="submit"></button>
 					</form>
 
-
-
+					<!-- Profile form -->
+					<form id="profile-form">
+						<input id="name-field" placeholder='name' type="text"><br>
+						<input id="email-field" placeholder='email' type="text"><br>
+						<input id="work-field" placeholder='work' type="text"><br>
+						<input id="story-field" placeholder='story' type="text"><br>
+						<button type="submit"></button>
+					</form>
 
 
 
@@ -39,12 +47,19 @@
 
 							<!-- Wrapper for slides -->
 							<div class="carousel-inner">
+
 								<div class="item active">
-									<img src="images/blkwht.JPG" alt="blkwhitepic" = "img-responsive">
+									<div id="help">
+									<a href="http://vitriol.herokuapp.com/"><img src="images/screenshot475.png" alt="projects" = "img-responsive"></a>
+									</div>
 								</div>
+
 								<div class="item">
-									<img src="images/drapes.jpg" alt="drapes" = "img-responsive">
+									<div id="help">
+									<a href="http://come-with-me.herokuapp.com/"><img src="images/screenshot475t.png" alt="projects" = "img-responsive"></a>
+									</div>
 								</div>
+
 							</div>
 							<!-- Controls -->
 							<a class="left carousel-control" href="#carousel" data-slide="prev">
@@ -58,26 +73,17 @@
 						</div>
 					</div>
 			 	</div> 
-			 <!-- </div> -->
-		<!-- </div>	 -->
 					<!-- profiles code -->
 					
 				<!-- <div class="container"> -->
-					<!-- Profile form -->
-					<form id="profile-form">
-						<input id="name-field" placeholder='name' type="text"><br>
-						<input id="email-field" placeholder='email' type="text"><br>
-						<input id="work-field" placeholder='work' type="text"><br>
-						<input id="story-field" placeholder='story' type="text"><br>
-						<button type="submit"></button>
-					</form>
+					
 				<!-- </div> -->
 					<div class="col-md-3 col-md-offset-8">
 						<!-- Profile List -->
+
 					<div id='profile-list'>
-					</ul>
 					</div>
-				
+					
 					<!-- Profile template -->
 					<script id="profileview-template" type='text/x-handlebars-template'>
 					<h2> {{ name  }}%> </h2>
@@ -97,8 +103,8 @@
 					</form> -->
 
 					<!-- project list -->
-					<ul id='project-list'>
-					</ul>
+					<div id='project-list'>
+					</div>
 
 	<!-- project/contact template 
 		although I don't need this information to show on the page-->
@@ -109,9 +115,6 @@
 			<p> {{ description }}</p>
 		</script>
 		
-
-
-
 		<%= javascript_include_tag "underscore" %>
 		<%= javascript_include_tag "backbone" %>
 		<%= javascript_include_tag "app" %>
