--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,5 +1,7 @@
 
 		<!-- trying without the navbar -->
+		<div class="pageheader">
+			<h1>Development through Committee</h1>
 		<div class = "navbar navbar navbar-fixed-top"
 			<div class="container">
 			<div class="navbar-inner"> 
@@ -8,11 +10,11 @@
 				
 				<button id="project-button" type="button" class="btn btn-default btn-lg active">Contact us for project</button>
 
-				<button id="about-button" type="button" class="btn btn-default btn-lg active">about</button>
+				<button id="about-button" type="button" class="btn btn-default btn-lg active">Development through what?</button>
 			</div>
 			</div> 
 			</div> 
-		
+			</div>
 					<div id='about-info'>
 						"hello"
 					</div>
