about content added

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -5,7 +5,6 @@
 		<div class = "navbar navbar navbar-fixed-top"
 			<div class="container">
 			<div class="navbar-inner"> 
-				
 				<button id="profile-button" type="button" class="btn btn-default btn-lg active">Contact us to become a part of the team</button>
 				
 				<button id="project-button" type="button" class="btn btn-default btn-lg active">Contact us for project</button>
@@ -16,7 +15,14 @@
 			</div> 
 			</div>
 					<div id='about-info'>
-						"hello"
+						<h5>Development by Committee has two focuses. One to provide really great Web Applications at the best rates available. 
+						<br>
+						<br>
+						As a client, your project will benefit by being development by a large team of great web developers.
+						<br>
+						<br>
+						As A developer you'll benefit from working on challenging projects with other skilled developers and designers as well as direction from Sr. Developers and Industry Guru's.
+						</h5>
 					</div>
 
 					<form id="project-form">
