--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -46,16 +46,17 @@ z-index: +1;
 }
 
 #about-info {
+  background-color: #FFFFCC;
   display: none;
-z-index: +1;
-  width: 50%;
+  z-index: +1;
+  width: 30%;
   border-radius: 1em;
   padding: 1em;
   margin: .25em;
-  width: 50%;
   position: absolute;
+  float: right;
 }
-
+/*
 li{
   background-color: #FFFFCC;
   border-radius: 1em;
@@ -63,7 +64,7 @@ li{
   margin: 0.25em;
   width: 50%;
   box-shadow: .1em .1em darkgray;
-}
+}*/
 
 #help {
   max-width: 200px; 
