--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -33,16 +33,27 @@ input{
   padding: 1em;
   margin: .25em;
   width: 50%;
+  /*float: right;*/
  /* box-shadow: .1em .1em darkgray;*/
 }
 
 #profile-list {
-z-index: +1;
+ z-index: +1;
   width: 50%;
   border-radius: 1em;
   padding: 1em;
   margin: .25em;
   width: 50%;
+  /*float: right;*/
+ /*background-color: #FFFFCC;
+  display: none;
+  z-index: +1;
+  width: 30%;
+  border-radius: 1em;
+  padding: 1em;
+  margin: .25em;
+  position: absolute;
+  float: right;*/
 }
 
 #about-info {
@@ -69,5 +80,20 @@ li{
 #help {
   max-width: 200px; 
   max-width: 200px;
+}
+
+#center {
+ {
+    left: 0;
+    line-height: 200px;
+    margin: auto;
+    margin-top: -100px;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+}
+
+#title {
+  font-family: 'Tangerine', serif;
 }
 
