--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -27,7 +27,7 @@
 						As a client, your project will benefit by being development by a large team of great web developers.
 						<br>
 						<br>
-						As a developer you'll benefit from working on challenging projects with other skilled developers and designers as well as direction from Sr. Developers and Industry Guru's.
+						As a developer you'll benefit from working on challenging projects with other skilled developers and designers as well as receiving direction from Sr. Developers and Industry Guru's.
 						</h5>
 					</div>
 
