--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -100,40 +100,16 @@
 
 					<!-- Profile template -->
 					<script id="profileview-template" type='text/x-handlebars-template'>
-					<h2> Hi, {{ name  }}, we will contact you shortly</h2>
+					<h3> Hi, {{ name  }}, we will contact you shortly</h3>
 					
 					</script>
-				<!-- 	<h3>  email  </h3>
-					<h3>  work   </h3>
-					<h3> story  </h3> -->
+				
 
-
-			<!--projects code -->
-					<!-- project form -->
-					<!-- <form id="project-form">
-						<input id="name-field" placeholder='name' type="text"><br>
-						<input id="email-field" placeholder='email' type="text"><br>
-						<input id="title-field" placeholder='title' type="text"><br>
-						<input id="description-field" placeholder='description' type="text"><br>
-						<button type="submit"></button>
-					</form> -->
-
-					<!-- project list -->
-					
-
-	<!-- project/contact template 
-		although I don't need this information to show on the page-->
+	<!-- project/contact template -->
 		<script id="projectview-template" type='text/x-handlebars-template'>
-			<h2> Thanks,{{ name }}, someone will contact you about your project shortly. </h2>
+			<h3> Thanks,{{ name }}, we are looking forward to speaking to you. </h3>
 			
 		</script>
-		
-		<!-- <h3> {{ email }} </h3>
-			<h3> {{ title }} </h3>
-			<h3> {{ description }}</h3> -->
-
-
-
 		
 		<%= javascript_include_tag "underscore" %>
 		<%= javascript_include_tag "backbone" %>
