--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -76,7 +76,7 @@
 								</div>
 
 							</div>
-							<!-- Controls -->
+							<!-- Controls for carousel-->
 							<a class="left carousel-control" href="#carousel" data-slide="prev">
 								<span class="icon-prev">
 								</span>
@@ -90,7 +90,6 @@
 			 	</div> 
 					<!-- profiles code -->
 					
-				<!-- <div class="container"> -->
 					
 				<!-- </div> -->
 					<div class="col-md-3 col-md-offset-8">
@@ -105,16 +104,15 @@
 					<p>{{ email }} </p>
 					<p> {{ title }} </p>
 					<p> {{ description }} </p>
-
 					</script>
 				
 
 	<!-- project/contact template -->
 		<script id="projectview-template" type='text/x-handlebars-template'>
-			<h3> Thanks,{{ name }}, we are looking forward to speaking to you. </h3>
+			<h3> Thanks,{{ name }}, we are looking forward to speaking to you.</h3>
 			{{ email }}
-					{{ work }}
-					{{ story }}
+			{{ work }}
+			{{ story }}
 		</script>
 		
 		<%= javascript_include_tag "underscore" %>
