center navbar and moved heading

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,16 +1,15 @@
 
 		<!-- trying without the navbar -->
 		<div class="pageheader">
-			<h1>Development through Committee</h1>
 			<div class = "navbar navbar navbar-fixed-top">
 				<div class="container">
-					<div class="navbar-inner"> 
+					<center><h1>Development through Committee</h1>
 						<button id="profile-button" type="button" class="btn btn-default btn-lg active">Contact us to become a part of the team</button>
 					
 						<button id="project-button" type="button" class="btn btn-default btn-lg active">Contact us for project</button>
 
 						<button id="about-button" type="button" class="btn btn-default btn-lg active">Development through what?</button>
-					</div>
+					</center>
 				</div> 
 			</div> 
 		</div>
