centered using css, center tag not supported in html5

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -67,6 +67,13 @@ input{
   max-width: 200px;
 }
 
+.centertop {
+  margin-left:auto;
+  margin-right:auto;
+  width: 90%;
+  text-align: center;
+}
+
 #center {
  
     left: 0;
