--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -3,13 +3,14 @@
 		<div class="pageheader">
 			<div class = "navbar navbar navbar-fixed-top">
 				<div class="container">
-					<center><h1>Development through Committee</h1>
+					<div class="centertop">
+							<h1>Development through Committee</h1>
 						<button id="profile-button" type="button" class="btn btn-default btn-lg active">Contact us to become a part of the team</button>
 					
 						<button id="project-button" type="button" class="btn btn-default btn-lg active">Contact us for project</button>
 
 						<button id="about-button" type="button" class="btn btn-default btn-lg active">Development through what?</button>
-					</center>
+					</div>
 				</div> 
 			</div> 
 		</div>
