--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -14,13 +14,6 @@
 				</div> 
 			</div> 
 		</div>
-
-		<div id='profile-list'>
-		</div>
-		
-		<div id='project-list'>
-		</div>
-					
 					<div id='about-info'>
 						<h5>Development by Committee has two focuses. One to provide really great Web Applications at the best rates available. 
 						<br>
@@ -32,7 +25,7 @@
 						</h5>
 					</div>
 
-
+				
 
 					<form id="project-form">
 						<input id="name-field" placeholder='name' type="text"><br>
@@ -88,7 +81,13 @@
 						</div>
 					</div>
 			 	</div> 
-
+				
+					<div id="pop-area">
+						<div id='profile-list'>
+						</div>
+						<div id='project-list'>
+						</div>
+					</div>
 
 					<!-- Profile template -->
 					<script id="profileview-template" type='text/x-handlebars-template'>
