--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,4 +1,3 @@
-
 		<!-- trying without the navbar -->
 		<div class="pageheader">
 			<div class = "navbar navbar navbar-fixed-top">
@@ -14,6 +13,7 @@
 				</div> 
 			</div> 
 		</div>
+
 					<div id='about-info'>
 						<h5>Development by Committee has two focuses. One to provide really great Web Applications at the best rates available. 
 						<br>
@@ -44,50 +44,54 @@
 						<button type="submit"></button>
 					</form>
 
-				<div class="container"> 
-					<div class="jumbotron">
-						<div id="carousel" class="carousel slide" data-ride="carousel">
-							<!-- Indicators -->
-							<ol class="carousel-indicators">
-								<li data-target="#carousel" data-slide-to="0" class="active"></li>
-								<li data-target="#carousel" data-slide-to="1"></li>
-							</ol>
+					
 
-							<!-- Wrapper for slides -->
-							<div class="carousel-inner">
 
-								<div class="item active">
-									<div id="help">
-									<a href="http://vitriol.herokuapp.com/"><img src="images/screenshot475.png" alt="projects" = "img-responsive"></a>
+					<div class="container"> 
+						<div class="jumbotron">
+							<div id="carousel" class="carousel slide" data-ride="carousel">
+								<!-- Indicators -->
+								<ol class="carousel-indicators">
+									<li data-target="#carousel" data-slide-to="0" class="active"></li>
+									<li data-target="#carousel" data-slide-to="1"></li>
+								</ol>
+
+								<!-- Wrapper for slides -->
+								<div class="carousel-inner">
+
+									<div class="item active">
+										<div id="help">
+											<a href="http://vitriol.herokuapp.com/"><img src="images/vit318475.png" alt="projects" = "img-responsive"></a>
+										</div>
 									</div>
-								</div>
 
-								<div class="item">
-									<div id="help">
-									<a href="http://come-with-me.herokuapp.com/"><img src="images/screenshot475t.png" alt="projects" = "img-responsive"></a>
+									<div class="item">
+										<div id="help">
+											<a href="http://come-with-me.herokuapp.com/"><img src="images/come318475.png" alt="projects" = "img-responsive"></a>
+										</div>
 									</div>
-								</div>
 
+								</div>
+								<!-- Controls for carousel-->
+								<a class="left carousel-control" href="#carousel" data-slide="prev">
+									<span class="icon-prev">
+									</span>
+								</a>
+								<a class="right carousel-control" href="#carousel" data-slide="next">
+									<span class="icon-next">
+									</span>
+								</a>
 							</div>
-							<!-- Controls for carousel-->
-							<a class="left carousel-control" href="#carousel" data-slide="prev">
-								<span class="icon-prev">
-								</span>
-							</a>
-							<a class="right carousel-control" href="#carousel" data-slide="next">
-								<span class="icon-next">
-								</span>
-							</a>
 						</div>
-					</div>
-			 	</div> 
-				
-					<div id="pop-area">
-						<div id='profile-list'>
-						</div>
-						<div id='project-list'>
-						</div>
-					</div>
+					</div> 
+
+			 	<div id="pop-area">
+			 		<div id='profile-list'>
+				 	</div>
+				 	<div id='project-list'>
+			 		</div>
+			 	</div>
+
 
 					<!-- Profile template -->
 					<script id="profileview-template" type='text/x-handlebars-template'>
