--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,6 +1,6 @@
 		<!-- trying without the navbar -->
 		<div class="pageheader">
-			<div class = "navbar navbar navbar-fixed-top">
+			<!-- <div class = "navbar navbar navbar-fixed-top"> -->
 				<div class="container">
 					<div class="centertop">
 							<h1>Development through Committee</h1>
@@ -11,7 +11,7 @@
 						<button id="about-button" type="button" class="btn btn-default btn-lg active">Development through what?</button>
 					</div>
 				</div> 
-			</div> 
+			<!-- </div>  -->
 		</div>
 
 					<div id='about-info'>
@@ -94,7 +94,7 @@
 
 
 					<!-- Profile template -->
-					<script id="profileview-template" type='text/x-handlebars-template'>
+				<script id="profileview-template" type='text/x-handlebars-template'>
 					<h3> Hi, {{ name  }}, we will contact you shortly</h3>
 					</script>
 				
@@ -102,7 +102,7 @@
 	<!-- project/contact template -->
 		<script id="projectview-template" type='text/x-handlebars-template'>
 			<h3> Thanks,{{ name }}, we are looking forward to speaking to you.</h3>
-		</script>
+			</script>
 		
 		<%= javascript_include_tag "underscore" %>
 		<%= javascript_include_tag "backbone" %>
