--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -31,7 +31,7 @@
 						<input id="name-field" placeholder='name' type="text"><br>
 						<input id="email-field" placeholder='email' type="text"><br>
 						<input id="title-field" placeholder='title' type="text"><br>
-						<input id="description-field" placeholder='description' type="text"><br>
+						<input id="description-field" placeholder='description' type="text" size='20x400'><br>
 						<button type="submit"></button>
 					</form>
 
