--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -61,13 +61,19 @@
 
 									<div class="item active">
 										<div id="help">
-											<a href="http://vitriol.herokuapp.com/"><img src="images/vit318475.png" alt="projects" = "img-responsive"></a>
+											<a href="http://vitriol.herokuapp.com/"><img src="images/vit326475.png" alt="projects" = "img-responsive"></a>
 										</div>
 									</div>
 
 									<div class="item">
 										<div id="help">
-											<a href="http://come-with-me.herokuapp.com/"><img src="images/come318475.png" alt="projects" = "img-responsive"></a>
+											<a href="http://come-with-me.herokuapp.com/"><img src="images/come326475.png" alt="projects" = "img-responsive"></a>
+										</div>
+									</div>
+
+									<div class="item">
+										<div id="help">
+											<a href="http://richardcgrundy.com"><img src="images/richard326475.png" alt="projects" = "img-responsive"></a>
 										</div>
 									</div>
 
